--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h2>legend.dev</h2>
+        <h2><a href="#">legend.dev</a></h2>
         <div class="header">
             <nav>
                 <ul>
