--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#portfolio" onclick="scrollToMiddle(event, 'portfolio')">Portfolio</a></li>
                     <li><a href="#testimonials" onclick="scrollToMiddle(event, 'testimonials')">Testimonials</a></li>
                 </ul>
-                <button><a href="#hire-me" onclick="scrollToMiddle(event, 'hire-me')">Hire Me</a></button>
+                <a href="#hire-me" onclick="scrollToMiddle(event, 'hire-me')"><button>Hire Me</button></a>
             </nav>
         </div>
         <img src="./Public/icon-menu.svg" alt="open mobile nav" class="open-nav-button nav-button icon">
@@ -46,7 +46,7 @@
                         <img src="./Public/bxl-tiktok.svg" alt="TikTok" class="icon">
                     </div>
                 </section>
-                <button class="close-nav"><a href="#hire-me" onclick="scrollToMiddle(event, 'hire-me')">Hire Me</a></button>
+                <a href="#hire-me" onclick="scrollToMiddle(event, 'hire-me')"><button class="close-nav">Hire Me</button></a>
             </nav>
         </div>
         <img src="./Public/bx-moon.svg" alt="dark mode" class="icon light-dark-mode">
